--- a/src/sass/blocks/_project.scss
+++ b/src/sass/blocks/_project.scss
@@ -1,6 +1,7 @@
 .project {
     min-height: 891px;
     background-color: #28282e;
+    padding-bottom: 70px;
     &__block {
         display: flex;
         justify-content: space-between;
