--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,3 +1,5 @@
+
+
 @media (max-width: 1200px) {
     .project__block {
         padding-bottom: 50px;
@@ -5,15 +7,70 @@
     .vimeo__slaider {
         max-width: 903px;
     }
+    
 }
 
 @media (max-width: 991px) {
 
+    .cards {
+        &__first {
+            display: flex;
+        }
+        &__second { 
+            display: flex;
+            margin-top: -110px;
+            margin-left: 116px; 
+        }
+        &__third { 
+            display: flex;
+            margin-top: -110px; 
+        }
+        &__card, &__card-one {
+            width: 160px;
+            height: 160px;
+            margin: 36px;
+        }
+        &__img {
+            padding-top: 40px;
+            padding-left: 15px;
+            &_nopadding {
+                padding: 0;
+            }
+        }
+        &__text, &__text-one {
+            font-size: 12px;
+        }
+        &__text-one {
+            margin-left: 10px;
+        }
+        &__card {
+            &:hover .cards__text {
+                padding: 14px 0 120px 15px;
+            }
+        }
+    }
+
     .works {
-        padding: 50px 0 0px;
+        padding: 50px 0;
+        &__block {
+          flex-direction: column; 
+          align-items: center;
+        }
+        &__title {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+        &__text {
+            width: 100%;
+            text-align: center;
+        }
+        
     }
     .project {
     &__block {
+        display: flex;
         flex-direction: column;
     }
     &__info {
@@ -28,7 +85,7 @@
         margin: 45px auto 0 auto;
     }
     }
-    .title h2 {
+    .title {
         font-size: 43px;
         line-height: 52px;
     }
@@ -40,7 +97,7 @@
         }
     }
     .vimeo__slaider {
-        max-width: 700px;
+        max-width: 703px;
     }
     .button {
         padding: 34px 0;
@@ -51,6 +108,322 @@
 }
 
 
-// 991
-// 767
-// 575
+
+
+@media (max-width: 767px) {
+    .main {
+        min-height: 692px;
+        &__block {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            margin-top: 100px;
+        }
+        &__title {
+            font-size: 38px;
+            text-align: center;
+        }
+    }
+    .title {
+        font-size: 36px;
+    }
+    .services {
+        &__text {
+            font-size: 16px;
+        }
+    }
+    .cards {
+        flex-direction: column;
+        &__first, &__second, &__third {
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
+        &__card-one {
+            transition:none;
+            &:hover {
+                background-color: #fff;
+                color: #000;
+                cursor: none;
+                box-shadow: none;
+            }
+        }
+        
+    }
+    
+
+    .line {
+        margin: 26px 0 20px 0;
+        &_black {
+            &:after {
+                background-color: #000000;
+                margin: 29px 0 36px 0;
+            } 
+        }
+    }
+    .works {
+        padding: 30px;
+    }
+    .project {
+        padding-bottom: 0;
+        &__text {
+            font-size: 16px;
+            margin-bottom: 42px;
+        }
+        &__content  {
+            width: 510px;
+            height: 284px;
+        }
+        &__img {
+            justify-content: center;
+            align-items: center;
+        }
+        &__img-tab {
+            width: 70%;
+        }
+        &__tabs {
+            margin-top: 41px;
+        }
+    }
+    .read {
+        padding-top: 50px;
+        &__header {
+            flex-direction: column;
+        }
+        &__title {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__text {
+            width: 100%;
+            margin: 0;
+            text-align: center;
+            font-size: 16px;
+        }
+        &__table {
+            th {
+                font-size: 16px;
+            }
+            td {
+                font-size: 14px;
+                padding-left: 19px;
+                padding-right: 19px;
+                h3 {
+                    font-size: 14px;
+                    margin-bottom: 10px;
+                }
+                p {
+                    font-size: 12px;
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+    .vimeo {
+        min-height: 80px;
+        padding-top: 39px;
+        padding-bottom: 50px;
+        &__title {
+            font-size: 32px;
+            margin-bottom: 30px;
+        }
+        &__text {
+            font-size: 16px;
+            padding: 0 20px;
+        }
+        .vimeo__slaider {
+            max-width: 500px;
+            img {
+                height: 356px;
+            }
+        }
+    }
+    .slick-dots button {
+        width: 8px;
+        height: 7px;
+        background: #1e1e20;
+        margin-right: 20px; // отступы между точками
+        outline: none; // убираем обводку
+        font-size: 0; //убрать цифры
+        
+    }   
+    .button {
+        padding: 20px 0;
+    }
+    .footer {
+        &__links {
+            flex-direction: column;
+        }
+        &__link {
+            text-align: center;
+            width: 100%;
+            margin-right: 0px;
+            margin-bottom: 15px;
+            &:nth-child(4) {
+                margin-bottom: 0;
+            }
+        }
+    }
+    .modal {
+        width: 380px;
+        min-height: 400px;
+        padding: 18px 20px 20px 20px;
+        &__form {
+            width: 340px;
+            input, textarea {
+                height: 40px;
+                margin-bottom: 10px;
+                padding: 0 10px;
+                font-size: 14px;
+            }
+            textarea {
+                height: 100px;
+                padding-top: 10px;
+                resize: none;
+            }
+        }
+        &__submit {
+            height: 35px;
+            font-size: 14px;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .main {
+        padding-bottom: 10px;
+        &__title {
+            font-size: 32px;
+            line-height: 37px;
+        }
+    }
+    .title {
+        font-size: 30px;
+    }
+    .line_black {
+        margin: 0;
+    }
+    .btn {
+        padding: 15px;
+        min-width: 157px;
+        min-height: 50px;
+        font-size: 12px;
+    }
+    .services {
+        padding-bottom: 30px;
+        padding-top: 42px;
+        &__text {
+            font-size: 14px;
+        }
+    }
+    .works {
+        &__text {
+            font-size: 14px;
+            padding: 0;
+        }
+    }
+    .project {
+        min-height: 750px;
+        &__block {
+            padding-bottom: 10px;
+        }
+        &__text {
+            font-size: 14px;
+        }
+        &__content  {
+            width: 300px;
+            height: 204px;
+        }
+        &__icon {
+            width: 40px;
+        }
+       &__img-phone {
+           width: 50%;
+       }
+    }
+    .read {
+        &__header {
+            margin-bottom: 30px;
+        }
+        &__text {
+            font-size: 14px;
+            
+        }
+        &__table {
+            th {
+                font-size: 14px;
+                padding-bottom: 10px;
+                line-height: 20px;
+            }
+            td {
+                font-size: 12px;
+                padding-left: 10px;
+                padding-right: 10px;
+                h3 {
+                    font-size: 12px;
+                }
+                p {
+                    font-size: 10px;
+                    line-height: 16px;
+                }
+            }
+        }
+        &__link {
+            a {
+             font-size: 12px;   
+            }
+            
+        }
+    }
+    .vimeo {
+        padding-bottom: 30px;
+        &__title {
+            font-size: 28px;
+        }
+        &__text {
+            font-size: 14px;
+            margin-bottom: 30px;
+        }
+        .vimeo__slaider {
+            max-width: 300px;
+            img {
+                height: 200px;
+            }
+        }
+    }
+    .slick-dots {
+        margin-top: 30px;
+    }
+    .button {
+        font-size: 14px;
+        padding: 15px 0;
+    }
+    .footer {
+        padding-top: 20px;
+        &__link {
+            font-size: 12px;
+            margin-bottom: 10px;
+        }
+    }
+    .modal {
+        width: 250px;
+        min-height: 400px;
+        padding: 18px 20px 20px 20px;
+        &__title {
+            font-size: 24px;
+        }
+        &__form {
+            width: 210px;
+            input, textarea {
+                font-size: 12px;
+            }
+        }
+        &__close {
+            right: -30px;
+            font-size: 40px;
+            line-height: 10px;
+        }
+    }
+}
