--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -1,7 +1,7 @@
 .btn {
     padding: 20px;
-    width: 157px;
-    height: 60px;
+    min-width: 157px;
+    min-height: 60px;
     border: 2px solid #f6f6f6;
     background: transparent;
     color: #f6f9fa;
@@ -11,18 +11,17 @@
     line-height: 14px;
     text-transform: uppercase;
     letter-spacing: 1.4px;
-    transition: 0.3s all;
-    &:hover {
+    transition: 0.3s all; 
+    outline: none;
+    &__hover {
+      &:hover {
         cursor: pointer;
         background-color: rgba(250, 250, 250, 0.5);
         color: #000;
-        box-shadow: 3px 3px 20px #fff;
-
-    }
-    &:active, &:focus {
+        box-shadow: 3px 3px 20px #fff;  
         outline: none;
     }
-    
+    }
 }
 
 .button {
