--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -4,16 +4,22 @@
     &__links {
         display: flex;
         justify-content: space-between;
-        a {
-            color: #76767b;
+    }
+    &__link {
+        width: 25%;
+        color: #76767b;
         font-family: "Proximanova";
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 0.97px;
         text-decoration: none;
-        &:hover {
-            color: #fff;
+        margin-right: 10px;
+        &:nth-child(4) {
+            margin-right: 0;
         }
+        &:hover {
+            text-decoration: none;
+            color: #fff;
         }
     }
 }
