--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -2,6 +2,7 @@
     background: url('../img/main.jpg') center (center/cover) no-repeat;
     min-height:  892px;
     padding-top: 51px;
+    padding-bottom: 70px;
     a {
         &:hover {
             text-decoration: none;
