--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -55,6 +55,7 @@
         textarea {
             height: 100px;
             padding-top: 10px;
+            resize: none;
         }
     }
     &__submit {
