--- a/src/sass/blocks/_vimeo.scss
+++ b/src/sass/blocks/_vimeo.scss
@@ -29,7 +29,7 @@
         margin: 0 auto;
         img {
             width: 100%;
-            max-height: 456px;
+            height: 456px;
             overflow: hidden;
         }
         
