--- a/src/sass/blocks/_cards.scss
+++ b/src/sass/blocks/_cards.scss
@@ -29,8 +29,8 @@
         position: relative;
         transform: rotate(-45deg) scale(1.4);
         z-index: 2;
-        padding-top: 70px;
-        padding-left: 25px;
+        padding-top: 50px;
+        padding-left: 18px;
         border: none;
         &_nopadding {
             padding: 0;
@@ -57,15 +57,15 @@
         display: flex;
         justify-content: center;
         padding-left: 0;
-        margin-left: 50px;
+        margin-left: 15px;
     }
 
     &__card-one {
-        transition: 0.3s all;
+        transition: 0.5s background-color, box-shadow;
         &:hover {
             background-color: #28282e;
-            color: #ffffff;
             cursor: pointer;
+            color: #ffffff; 
             box-shadow: 3px 3px 20px #28282e;
         }
     }
@@ -82,7 +82,7 @@
             opacity: 0.9;
             margin-top: -105px;
             width: 272px;
-            padding: 14px 0 100px 15px;
+            padding: 14px 0 100px 17px;
             color: #fff;
             font-size: 13px;
             text-transform: none;
