--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -82,5 +82,10 @@
         text-align: center;
         margin-bottom: 10px;
     }
+    &_mini {
+        min-height: 144px;
+        display: none;
+    }
+    
 }
 
