--- a/src/sass/blocks/_works.scss
+++ b/src/sass/blocks/_works.scss
@@ -7,6 +7,9 @@
     }
     &__title {
         width: 50%;
+        h2 {
+            text-align: left;
+        }
     }
     &__text {
         width: 50%;
